[gd_scene load_steps=10 format=4 uid="uid://c5j2ox22xuscg"]

[ext_resource type="PackedScene" uid="uid://by13a22vxwdu1" path="res://game/levels/base_level.tscn" id="1_iapuj"]
[ext_resource type="TileSet" uid="uid://bxjd1yx0ntj88" path="res://assets/tilesets/main_tileset.tres" id="2_uq2ho"]
[ext_resource type="Script" uid="uid://bn21x38drplvg" path="res://game/entities/hitbox/hit_box.gd" id="3_fiap7"]
[ext_resource type="Script" uid="uid://bnktai1u2rqbo" path="res://game/scripts/flag_checker.gd" id="3_t4636"]
[ext_resource type="PackedScene" uid="uid://cqqw42miprcfm" path="res://game/entities/interactable/terminal.tscn" id="3_uq2ho"]
[ext_resource type="PackedScene" uid="uid://dik57o15hkrog" path="res://game/entities/obstacles/gate/gate.tscn" id="4_luc8m"]
[ext_resource type="PackedScene" uid="uid://b8kxe75yox7h4" path="res://game/entities/obstacles/laser/laser.tscn" id="6_luc8m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knvvg"]
size = Vector2(320, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uq2ho"]
size = Vector2(40, 4)

[node name="DashVertical" instance=ExtResource("1_iapuj")]

[node name="LaserTimer" type="Timer" parent="." index="0"]
autostart = true

[node name="FlagNode" type="Node2D" parent="." index="1"]
script = ExtResource("3_t4636")
flag = "dash_challenge_vertical_switch"
metadata/_custom_type_script = "uid://bnktai1u2rqbo"

[node name="Terminal" parent="Background" index="0" instance=ExtResource("3_uq2ho")]
position = Vector2(30, 150)

[node name="Gate2" parent="Background" index="1" instance=ExtResource("4_luc8m")]
position = Vector2(250, 60)
height = 4

[node name="BackGroundR" type="TileMapLayer" parent="Background" index="2"]
modulate = Color(0.49803922, 0.49803922, 0.49803922, 1)
position = Vector2(4, 0)
tile_map_data = PackedByteArray("AAAPABYAAAADAAEAAAAPABcAAAADAAEAAAAPABgAAAADAAEAAAAPABkAAAADAAEAAAAPABoAAAADAAEAAAAPAAIAAAADAAEAAAAPAAMAAAADAAEAAAAPAAQAAAADAAEAAAAPAAUAAAADAAEAAAA=")
tile_set = ExtResource("2_uq2ho")
collision_enabled = false

[node name="Offset" type="TileMapLayer" parent="Background" index="3"]
position = Vector2(10, 0)
tile_map_data = PackedByteArray("AAAPABEAAAAAAAEAAAAPABUAAAAAAAEAAAAIABMAAAADAAEAAAD//xMAAAACAAEAAAD//w8AAAACAAEAAAAFAA0AAAAAAAIAAAAGAA0AAAABAAIAAAD//wQAAAACAAEAAAA=")
tile_set = ExtResource("2_uq2ho")

[node name="Main" type="TileMapLayer" parent="Background" index="4"]
tile_map_data = PackedByteArray("AAAIABQAAAAAAAAAAAAJABQAAAACAAAAAAAJABAAAAACAAAAAAAIABAAAAAAAAAAAAAFAA4AAAADAAAAAAAFABQAAAADAAIAAAAAABIAAAACAAIAAAAAAA4AAAACAAIAAAAFAA8AAAADAAEAAAAFABAAAAADAAIAAAAFABIAAAADAAAAAAAFABMAAAADAAEAAAAJABEAAAACAAEAAAAIABEAAAAAAAEAAAAIABIAAAAAAAIAAAAJABIAAAACAAIAAAAIABUAAAAAAAEAAAAIABYAAAAAAAEAAAAIABcAAAAAAAEAAAAIABgAAAAAAAEAAAAIABkAAAAAAAEAAAAJABUAAAACAAEAAAAJABYAAAACAAEAAAAJABcAAAACAAEAAAAJABgAAAACAAEAAAAJABkAAAACAAEAAAAPABoAAAABAAAAAAAOABoAAAABAAAAAAANABoAAAABAAAAAAAMABoAAAABAAAAAAALABoAAAABAAAAAAAKABoAAAABAAAAAAAJABoAAAAEAAEAAAAIABoAAAAFAAEAAAAHABoAAAABAAAAAAAGABoAAAABAAAAAAAFABoAAAABAAAAAAAEABoAAAABAAAAAAADABoAAAABAAAAAAACABoAAAABAAAAAAABABoAAAABAAAAAAAAABoAAAAEAAEAAAAAABkAAAACAAEAAAAAABgAAAACAAEAAAAAABcAAAACAAEAAAAAABYAAAACAAEAAAAAABUAAAACAAEAAAAAABQAAAACAAAAAAAAABAAAAACAAAAAAAAABEAAAACAAEAAAAAAA0AAAACAAEAAAAAAAwAAAACAAEAAAAAAAsAAAACAAEAAAAAAAoAAAACAAEAAAALAAkAAAACAAIAAAALAAgAAAACAAAAAAAKAAgAAAABAAAAAAAJAAgAAAABAAAAAAAIAAgAAAABAAAAAAAHAAgAAAABAAAAAAAGAAgAAAABAAAAAAAFAAgAAAABAAAAAAAEAAgAAAABAAAAAAADAAgAAAABAAAAAAACAAgAAAABAAAAAAABAAgAAAABAAAAAAAAAAgAAAAEAAEAAAAKAAkAAAABAAIAAAAJAAkAAAABAAIAAAAIAAkAAAABAAIAAAAHAAkAAAABAAIAAAAGAAkAAAABAAIAAAAFAAkAAAABAAIAAAAEAAkAAAABAAIAAAADAAkAAAABAAIAAAACAAkAAAABAAIAAAABAAkAAAABAAIAAAAAAAkAAAAEAAAAAAACAAcAAAADAAEAAAACAAYAAAADAAEAAAACAAUAAAADAAEAAAACAAQAAAADAAEAAAACAAMAAAADAAAAAAAAAAcAAAACAAEAAAAAAAMAAAACAAIAAAAAAAIAAAACAAEAAAAAAAEAAAACAAEAAAAAAAAAAAAEAAAAAAABAAAAAAABAAIAAAACAAAAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAAABAAIAAAAMAAAAAAABAAIAAAANAAAAAAABAAIAAAAOAAAAAAABAAIAAAAPAAAAAAAFAAAAAAAPAAEAAAAAAAEAAAAPAAIAAAAAAAIAAAAJAAUAAAAAAAMAAAAKAAUAAAABAAMAAAALAAUAAAABAAMAAAAMAAUAAAABAAMAAAANAAUAAAACAAMAAAAOAAYAAAAFAAAAAAAPAAcAAAAFAAAAAAAPAAgAAAAAAAEAAAAPAAkAAAAAAAEAAAAPAAoAAAAAAAEAAAAPAAsAAAAAAAEAAAAFAAwAAAAAAAMAAAAGAAwAAAABAAMAAAAHAAwAAAABAAMAAAAIAAwAAAABAAMAAAAJAAwAAAAAAAAAAAAKAAwAAAABAAAAAAALAAwAAAABAAAAAAAMAAwAAAABAAAAAAANAAwAAAABAAAAAAAOAAwAAAABAAAAAAAPAAwAAAAFAAEAAAAOAAcAAAAAAAIAAAANAAYAAAAAAAIAAAAOAAUAAAABAAAAAAAPAAUAAAABAAAAAAAPAAYAAAABAAEAAAAPAA4AAAAAAAEAAAAPABAAAAAAAAIAAAAPAA8AAAAAAAEAAAAPABIAAAAAAAAAAAAPABMAAAAAAAEAAAAPABQAAAAAAAIAAAAPABYAAAAAAAMAAAAFABYAAAADAAAAAAAFABcAAAADAAIAAAAHAA0AAAABAAIAAAAIAA0AAAABAAIAAAAJAA0AAAABAAIAAAAKAA0AAAABAAIAAAALAA0AAAABAAIAAAAMAA0AAAABAAIAAAANAA0AAAABAAIAAAAOAA0AAAABAAIAAAAPAA0AAAAFAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAEAAAA=")
tile_set = ExtResource("2_uq2ho")

[node name="Laser" parent="Foreground" index="0" node_paths=PackedStringArray("hitbox") instance=ExtResource("6_luc8m")]
position = Vector2(60, 360)
rotation = -1.5707964
hitbox = NodePath("Hitbox")
length = 320

[node name="Hitbox" type="Area2D" parent="Foreground/Laser" index="3"]
collision_layer = 16
collision_mask = 8
script = ExtResource("3_fiap7")
custom_knockback = true
knockback = Vector2(75, 0)
metadata/_custom_type_script = "uid://bn21x38drplvg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Laser/Hitbox" index="0"]
shape = SubResource("RectangleShape2D_knvvg")

[node name="Laser2" parent="Foreground" index="1" node_paths=PackedStringArray("hitbox") instance=ExtResource("6_luc8m")]
position = Vector2(130, 220)
rotation = -1.5707964
hitbox = NodePath("Hitbox")
length = 40
active = false
metadata/_edit_group_ = true

[node name="Hitbox" type="Area2D" parent="Foreground/Laser2" index="3"]
visible = false
collision_layer = 16
collision_mask = 8
monitoring = false
script = ExtResource("3_fiap7")
custom_knockback = true
knockback = Vector2(75, 0)
metadata/_custom_type_script = "uid://bn21x38drplvg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Laser2/Hitbox" index="0"]
shape = SubResource("RectangleShape2D_uq2ho")

[node name="Laser3" parent="Foreground" index="2" node_paths=PackedStringArray("hitbox") instance=ExtResource("6_luc8m")]
position = Vector2(200, 220)
rotation = -1.5707964
hitbox = NodePath("Hitbox")
length = 40
metadata/_edit_group_ = true

[node name="Hitbox" type="Area2D" parent="Foreground/Laser3" index="3"]
collision_layer = 16
collision_mask = 8
script = ExtResource("3_fiap7")
custom_knockback = true
knockback = Vector2(75, 0)
metadata/_custom_type_script = "uid://bn21x38drplvg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Laser3/Hitbox" index="0"]
shape = SubResource("RectangleShape2D_uq2ho")

[connection signal="timeout" from="LaserTimer" to="Foreground/Laser" method="toggle"]
[connection signal="timeout" from="LaserTimer" to="Foreground/Laser2" method="toggle"]
[connection signal="timeout" from="LaserTimer" to="Foreground/Laser3" method="toggle"]
[connection signal="flag_checked" from="FlagNode" to="Background/Gate2" method="queue_free"]
[connection signal="flag_checked" from="FlagNode" to="Background/Terminal" method="deactivate"]
[connection signal="flag_just_checked" from="FlagNode" to="Background/Gate2" method="open_up"]
[connection signal="flag_just_checked" from="FlagNode" to="Background/Terminal" method="deactivate"]
[connection signal="interact" from="Background/Terminal" to="FlagNode" method="set_flag" unbinds=1]
